<resources>
    <string name="app_name">Shawsank Prison</string>
    <string name="title_activity_main_shawsank">MainShawsankActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_shawsank">About Shawsank</string>
    <string name="view_prisoners">View Prisoners</string>
    <string name="manipulate_prisoners">Manipulate Prisoners</string>
    <string name="add_prisoner">Add Prisoner</string>
    <string name="update_prisoner">Update Prisoner</string>
    <string name="delete_Prisoner">Delete Prisoner</string>
    <string name="edit_prisoner_name">Name :</string>
    <string name="edit_prisoner_email">Email :</string>
    <string name="edit_prisoner_mobile">Mobile No.:</string>
    <string name="edit_prisoner_crime">Crime :</string>
    <string name="edit_prisoner_isSentenced">Is Sentenced:</string>
    <string name="edit_prisoner_dob">Date of Birth :</string>
    <string name="edit_prisoner_photo">Photo :</string>
    <string name="select_item">Select Item</string>
    <string name="go_back">Go Back</string>
    <string name="edit_profile_photo">Profile Photo :</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="desc_imageView">Image of Prisoner</string>

    <string-array name="crimes">
        <item>Theft</item>
        <item>Murder</item>
        <item>Kidnap</item>
        <item>Rape</item>
        <item>Smuggling</item>
        <item>Eve-teasing</item>
        <item>Gangster</item>
        <item>Driving on FootPath</item>
        <item>Killing Deer</item>
        <item>Getting Married</item>
        <item>Arguing with girls</item>
    </string-array>
    <string-array name="boolean_values">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string name="title_activity_view_prisoner">ViewPrisonerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email id</string>
    <string name="label_mobile">Mobile no.</string>
    <string name="label_crime">Crime</string>
    <string name="label_sentenced">Is Sentenced</string>
    <string name="label_dob">Date Of Birth</string>
    <string name="label_caught_on">Caught on</string>
    <string name="label_image">Profile Image</string>
    <string name="label_age">Age</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="update_fields_suggestion">Click On Fields You Want to Update</string>
    <string name="prisoner_name_enter">Update Name of the prisoner</string>
    <string name="prisoner_id_enter">Update Id of the prisoner</string>
    <string name="prisoner_email_enter">Update email of the prisoner</string>
    <string name="prisoner_mobile_enter">Update mobile no. of the prisoner</string>
    <string name="prisoner_DOB_enter">Update DOB of the prisoner</string>
    <string name="prisoner_sentence_enter">select prisoner sentenced or not</string>
    <string name="prisoner_crime_enter">Select Crime of the prisoner</string>
    <string name="get_info">Get Info</string>
    v</resources>
