<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lvk.shawsank_prison.Activities.UpdatePrisonerActivity"
    android:background="@drawable/prison">
    <android.support.v7.widget.CardView
        android:id="@+id/suggest_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/update_fields_suggestion"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>
        <GridLayout
            android:layout_below="@id/suggest_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rowCount="4"
            android:columnCount="2"
            android:orientation="vertical">
            <Button
                android:id="@+id/update_button_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="2"
                android:background="@drawable/mybutton"
                android:fontFamily="casual"
                android:padding="15dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/label_name"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_email"
                android:layout_width="wrap_content"
                android:text="@string/label_email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_mobile"
                android:layout_width="wrap_content"
                android:text="@string/label_mobile"
                android:textSize="20sp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_crime"
                android:layout_width="wrap_content"
                android:text="@string/label_crime"
                android:textSize="20sp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_dob"
                android:layout_width="wrap_content"
                android:text="@string/label_dob"
                android:textSize="20sp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_sentenced"
                android:layout_width="wrap_content"
                android:text="@string/label_sentenced"
                android:textSize="20sp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
            <Button android:layout_height="wrap_content"
                android:id="@+id/update_button_photo"
                android:layout_width="wrap_content"
                android:text="@string/label_image"
                android:textSize="20sp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/mybutton"/>
        </GridLayout>
</RelativeLayout>
