<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.lvk.shawsank_prison.Activities.ViewPrisonerActivity"
    android:fitsSystemWindows="true"
    android:background="@color/cardview_shadow_start_color">
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">
        <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <RelativeLayout android:layout_height="250dp"
                android:id="@+id/image_view_details"
                android:layout_width="match_parent">
                <ImageView
                    android:id="@+id/prisoner_image_view"
                    android:layout_centerHorizontal="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@drawable/prisoner"
                    android:contentDescription="Prisoner Image in Details Page" />
            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_details"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:duplicateParentState="true"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_name"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_name"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_crime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_crime"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_crime_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_crime"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_sentenced"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_sentenced"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_sentenced_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_caught"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_sentence"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_joined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_caught_on"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_caught_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_caught"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:duplicateParentState="true"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_age"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_age_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_age"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_email"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_email_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_email"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                android:layout_margin="5dp">
                <LinearLayout android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">
                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:id="@+id/label_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/label_mobile"
                        android:textStyle="bold"/>
                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_marginStart="40dp"
                        android:id="@+id/prisoner_mobile_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>



        </RelativeLayout>
    </ScrollView>
    <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>

    </FrameLayout>
</FrameLayout>
